build/log/idf_py_stderr_output_50841
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c: In function 'button_task':
/Users/promex04/Desktop/guild/speech_recognition/wwe/LyratMini_RecordPlay/main/main_ws.c:503:13: error: implicit declaration of function 'esp_periph_set_wait'; did you mean 'esp_periph_set_init'? [-Wimplicit-function-declaration]
  503 |         if (esp_periph_set_wait(set, &msg, portMAX_DELAY) == ESP_OK) {
      |             ^~~~~~~~~~~~~~~~~~~
      |             esp_periph_set_init
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/main_ws.c.obj] Error 1
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
